@@ -2,7 +2,7 @@ Changes in 1.3.7
 ================
 
 New features:
-
+- 2920773 Tests for reliable indications
 
 Bugs fixed:
 
